--- a/scss/layout/_sections.scss
+++ b/scss/layout/_sections.scss
@@ -1,16 +1,17 @@
 // ==== ARTICLES ==== //
 
-.article{
+.article {
     display: flex;
     background-color: $white;
     padding: $marge;
 }
 
-.notation{
+.notation {
     width: 30px;
 }
 
-button, [type="button"]{
+button,
+[type="button"] {
     width: 50px;
     border: none;
     border-radius: 5px;
@@ -18,19 +19,19 @@ button, [type="button"]{
     padding: 2px 10px;
 }
 
-main .btn{
+main .btn {
     background: rgb(226, 86, 5);
     border-radius: 10px;
     padding: 5px;
     margin: 10px;
 }
 
-article{
+article {
     flex-direction: column;
     justify-content: space-between;
 }
 
-.article article:nth-of-type(2){
+.article article:nth-of-type(2) {
     display: none;
 
     @media (min-width: $bp-medium) {
@@ -42,7 +43,7 @@ article{
     }
 }
 
-.article article:nth-of-type(3){
+.article article:nth-of-type(3) {
     display: none;
 
     @media (min-width: $bp-medium) {
@@ -54,39 +55,134 @@ article{
     }
 }
 
-h3{
+h3 {
     text-align: center;
     font-size: 1.875rem;
     margin: 0 auto;
     padding: 30px;
-    
+
 }
-h3:before, h3:after {
-    content:'';
+
+h3:before,
+h3:after {
+    content: '';
     width: 3rem;
     border-bottom: $orange solid 8px;
     display: inline-block;
     vertical-align: middle;
-  }
-  h3:before {
-    margin-left:-100%;
-  margin-right:0.5rem}
-  h3:after {
-    margin-right:-100%;
-  margin-left:0.5rem;}
+}
 
-  main{
-      background-color: $beige;
-  }
+h3:before {
+    margin-left: -100%;
+    margin-right: 0.5rem
+}
 
-  .photo{
-    border:solid #fff;
-    border-width:6px 6px 20px 6px;
-    box-shadow:1px 1px 5px #333;
+h3:after {
+    margin-right: -100%;
+    margin-left: 0.5rem;
+}
+
+main {
+    background-color: $beige;
+    padding: 20px 0 20px;
+}
+
+.photo {
+    border: solid #fff;
+    border-width: 6px 6px 20px 6px;
+    box-shadow: 1px 1px 5px #333;
     transform: rotate(25deg);
     margin: 50px;
-  }
+}
 
-  .photo:nth-of-type(2){
-      transform: rotate(-25deg);
-  }
+.photo:nth-of-type(2) {
+    transform: rotate(-25deg);
+}
+
+// pays
+
+#pays {
+    display: flex;
+    justify-content: center;
+}
+
+.pays-img img {
+    width: 900px;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+
+.pays-img h2{
+    text-align: center;
+}
+
+
+// page séjour
+
+.presentation {
+    margin: 0 auto;
+    padding: 20px 0 20px;
+    width: 600px;
+}
+
+#presentation {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 0 40px 0;
+}
+
+#presentation img {
+    width: 400px;
+    padding-top: 40px;
+}
+
+
+// Départs
+
+.depart {
+    text-align: center;
+    padding-top: 100px;
+}
+
+body {
+    margin: 0%;
+    font-family: Verdana, sans-serif
+}
+
+* {
+    box-sizing: border-box;
+}
+
+table a {
+    color: rgb(2, 4, 82);
+}
+
+table {
+
+    width: 70%;
+    margin: 40px auto;
+    border-collapse: collapse;
+}
+
+tr:nth-of-type(odd) {
+    background-color: #eee
+}
+
+th,
+td {
+    border: 1px solid #ccc;
+    padding: 20px 15px;
+}
+
+th {
+    background-color: #ccc;
+    color: #fff;
+    text-align: left;
+}
+
+td:nth-of-type(1),
+td:nth-last-of-type(2) {
+    color: rgb(226, 99, 14);
+    font-family: monospace, 'Monaco Normal';
+    width: 20%;
+}
